<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#f7faff">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="452dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
            android:background="@drawable/gradinet_button" android:id="@+id/tableLayout">

        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button
                    android:text="@string/c"
                    android:layout_width="match_parent"
                    android:layout_height="90dp" android:id="@+id/clear" android:layout_weight="1"
                    android:textSize="24sp" android:background="@drawable/background_button"
                    style="@style/Widget.AppCompat.Button.Small" android:textColor="@android:color/holo_orange_dark"
                    android:padding="0dp" android:layout_margin="0.2dp"
                    android:typeface="monospace"/>
            <Button
                    android:text="@string/prantheses"
                    android:layout_width="match_parent"
                    android:layout_height="90dp" android:id="@+id/parentheses" android:layout_weight="1"
                    android:background="@drawable/background_button" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp" android:typeface="monospace"
                    android:textColor="@android:color/tertiary_text_light"/>
            <Button
                    android:text="@string/persent"
                    android:layout_width="match_parent"
                    android:layout_height="90dp" android:id="@+id/persent" android:layout_weight="1"
                    android:background="@drawable/background_button" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp" android:typeface="monospace"
                    android:textColor="@android:color/tertiary_text_light"/>
            <Button
                    android:text="@string/div"
                    android:layout_width="match_parent"
                    android:layout_height="90dp" android:id="@+id/div_btn" android:layout_weight="1"
                    android:background="@drawable/background_button"
                    android:textColor="@android:color/holo_blue_dark" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp" android:typeface="monospace"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button
                    android:text="@string/_7"
                    android:layout_width="match_parent"
                    android:layout_height="90dp" android:id="@+id/seven" android:layout_weight="1"
                    android:background="@drawable/background_button" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp" android:typeface="monospace"
                    android:textColor="@android:color/tertiary_text_light"/>
            <Button
                    android:text="@string/_8"
                    android:layout_width="match_parent"
                    android:layout_height="90dp" android:id="@+id/eight" android:layout_weight="1"
                    android:background="@drawable/background_button" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp" android:typeface="monospace"
                    android:textColor="@android:color/tertiary_text_light"/>
            <Button
                    android:text="@string/_9"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp" android:id="@+id/nine" android:layout_weight="1"
                    android:background="@drawable/background_button" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp"
                    android:textAllCaps="false" android:textAppearance="@android:style/TextAppearance.Widget.TextView"
                    android:textColor="@android:color/tertiary_text_light"/>
            <Button
                    android:text="@string/mul"
                    android:layout_width="match_parent"
                    android:layout_height="90dp" android:id="@+id/mul_btn" android:layout_weight="1"
                    android:background="@drawable/background_button"
                    android:textColor="@android:color/holo_blue_dark" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp" android:typeface="monospace"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/_4"
                    android:layout_width="match_parent"
                    android:layout_height="90dp" android:id="@+id/four" android:layout_weight="1"
                    android:background="@drawable/background_button" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp" android:typeface="monospace"
                    android:textColor="@android:color/tertiary_text_light"/>
            <Button
                    android:text="@string/_5"
                    android:layout_width="match_parent"
                    android:layout_height="90dp" android:id="@+id/five" android:layout_weight="1"
                    android:background="@drawable/background_button" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp" android:typeface="monospace"
                    android:textColor="@android:color/tertiary_text_light"/>
            <Button
                    android:text="@string/_6"
                    android:layout_width="match_parent"
                    android:layout_height="90dp" android:id="@+id/six" android:layout_weight="1"
                    android:background="@drawable/background_button" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp" android:typeface="monospace"
                    android:textColor="@android:color/tertiary_text_light"/>
            <Button
                    android:text="@string/sub"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/sub_btn"
                    android:background="@drawable/background_button"
                    android:textColor="@android:color/holo_blue_dark" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp" android:typeface="monospace"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/_1"
                    android:layout_width="match_parent"
                    android:layout_height="90dp" android:id="@+id/one" android:layout_weight="1"
                    android:background="@drawable/background_button" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp" android:typeface="monospace"
                    android:textColor="@android:color/tertiary_text_light"/>
            <Button
                    android:text="@string/_2"
                    android:layout_width="match_parent"
                    android:layout_height="90dp" android:id="@+id/two" android:layout_weight="1"
                    android:background="@drawable/background_button" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp" android:typeface="monospace"
                    android:textColor="@android:color/tertiary_text_light"/>
            <Button
                    android:text="@string/_3"
                    android:layout_width="match_parent"
                    android:layout_height="90dp" android:id="@+id/three" android:layout_weight="1"
                    android:background="@drawable/background_button" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp" android:typeface="monospace"
                    android:textColor="@android:color/tertiary_text_light"/>
            <Button
                    android:text="@string/sum"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/sum_btn" android:layout_weight="1"
                    android:background="@drawable/background_button"
                    android:textColor="@android:color/holo_blue_dark" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp" android:typeface="monospace"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/charge"
                    android:layout_width="match_parent"
                    android:layout_height="90dp" android:id="@+id/charge" android:layout_weight="1"
                    android:background="@drawable/background_button" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp" android:typeface="monospace"
                    android:textColor="@android:color/tertiary_text_light"/>
            <Button
                    android:text="@string/_0"
                    android:layout_width="match_parent"
                    android:layout_height="90dp" android:id="@+id/zero" android:layout_weight="1"
                    android:background="@drawable/background_button" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp" android:typeface="monospace"
                    android:textColor="@android:color/tertiary_text_light"/>
            <Button
                    android:text="@string/dot"
                    android:layout_width="match_parent"
                    android:layout_height="90dp" android:id="@+id/dot" android:layout_weight="1"
                    android:background="@drawable/background_button" android:padding="0dp"
                    android:layout_margin="0.2dp" android:textSize="24sp" android:typeface="monospace"
                    android:textColor="@android:color/tertiary_text_light"/>
            <Button
                    android:text="@string/result"
                    android:layout_width="match_parent"
                    android:layout_height="90dp" android:id="@+id/result_btn" android:layout_weight="1"
                    android:padding="0dp" android:layout_margin="0.2dp"
                    android:background="#fff0000000000"
                    android:typeface="monospace"
                    android:textSize="24sp" android:textColor="@android:color/background_light"/>
        </TableRow>
    </TableLayout>
    <TextView
            android:text="1234567890"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            android:gravity="bottom|right" app:layout_constraintHorizontal_bias="0.0"
            android:textSize="30sp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView" app:fontFamily="@font/open_sans_light"
            android:textColor="#3a3a3a" app:layout_constraintVertical_bias="0.821"/>
    <ImageView
            android:layout_width="23dp"
            android:layout_height="25dp" app:srcCompat="@drawable/delete"
            android:id="@+id/imageView" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="@+id/textView"
    />
</android.support.constraint.ConstraintLayout>